--- a/microdonate/templates/microdonate/detailDon.html
+++ b/microdonate/templates/microdonate/detailDon.html
@@ -151,13 +151,15 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
   </button>
   <div class="collapse navbar-collapse" id="microdonate-navbar">
     <div class="navbar-nav ml-auto">
+      <a class="nav-link active" href="{% url 'dashboard' %}">Dashboard</a>
+      <div class="nav-link active">|</div>
       <a class="nav-link active" href="#">How does it work?</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'leaderboard' %}">Leaderboard</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
-      <span class="nav-link active">Welcome {{user.username}}!</span>
+      <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}</span>!</span>
     </div>
   </div>
 </nav>
@@ -179,7 +181,8 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
           </div>
         </div>
         <div class="row center-content">
-          <a class="btn btn-lg btn-custom-secondary">Go to Comments</a>
+          <a href="{% url 'donate_comments_list' opp_id %}" class="btn btn-lg btn-custom-secondary" style="margin:5px;">Go to Comments</a>
+          <a href="{% url 'donate_comments' opp_id %}" class="btn btn-lg btn-custom-secondary" style="margin:5px;">Leave a Comment</a>
         </div>
       </div>
         <div class="col">
