--- a/microdonate/templates/microdonate/profile.html
+++ b/microdonate/templates/microdonate/profile.html
@@ -121,13 +121,15 @@
   </button>
   <div class="collapse navbar-collapse" id="microdonate-navbar">
     <div class="navbar-nav ml-auto">
+      <a class="nav-link active" href="{% url 'dashboard' %}">Dashboard</a>
+      <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'about' %}">How does it work?</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'leaderboard' %}">Leaderboard</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
-      <span class="nav-link active">Welcome {{user.username}}!</span>
+      <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}!</span>
     </div>
   </div>
 </nav>
