--- a/microdonate/templates/microdonate/volunteer_comments.html
+++ b/microdonate/templates/microdonate/volunteer_comments.html
@@ -33,48 +33,36 @@
   }
   .bg {
     background-image: linear-gradient(
-        to bottom,
-        rgb(125, 207, 182, 1),
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("https://images.unsplash.com/photo-1557660559-42497f78035b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=815&q=80");
-    padding: 3em;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    border-bottom: 5px inset #fbd1a2;
+      to bottom,
+      rgb(125, 207, 182),
+      rgb(251, 209, 162)
+    );
+    padding-top: 3em;
+    padding-bottom: 3em;
   }
   .center-content {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .list-group-item-custom {
-    background-color: #7dcfb6;
+  .card-container {
+    padding: 3em;
+    width: 60%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
+    border-radius: 10px;
+  }
+  .card-title {
+    margin-left: 1em;
+    margin-top: 0.5em;
+    font-weight: bolder;
+    font-size: xx-large;
     color: white;
-    font-weight: bold;
-  }
-  .list-group-item-custom-1 {
-    background-color: #f79256;
-    color: white;
-    font-weight: bold;
-  }
-  .list-group{
-    width: 32em;
-    max-height: 600;
-    overflow: scroll;
-    margin-top: 3em;
-    margin-bottom: 3em;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .list-group::-webkit-scrollbar {
-    display: none;
   }
   .btn-custom-primary {
-    background-color: #7dcfb6;
-    border: none;
+    background-color: #f79256;
     color: white;
+    border: none;
   }
   .btn-custom-secondary {
     background-color: #f79256;
@@ -82,6 +70,9 @@
     color: white;
   }
 </style>
+{% if error_message %}
+<p><strong>{{ error_message }}</strong></p>
+{% endif %}
 <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
   <a class="navbar-brand mb-0 h1" href="{% url 'dashboard' %}">
     <img
@@ -108,7 +99,7 @@
     <div class="navbar-nav ml-auto">
       <a class="nav-link active" href="{% url 'dashboard' %}">Dashboard</a>
       <div class="nav-link active">|</div>
-      <a class="nav-link active" href="{% url 'about' %}">How does it work?</a>
+      <a class="nav-link active" href="#">How does it work?</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'leaderboard' %}">Leaderboard</a>
       <div class="nav-link active">|</div>
@@ -118,48 +109,45 @@
     </div>
   </div>
 </nav>
-<div class="bg">
-  <h2>{{title}}</h2>
-  {{op.date}}
-  <h6>{{op.description}}</h6>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="list-group">
-        <div class="list-group-item-custom list-group-item">
-          Participants Signed Up:
-        </div>
-        {% for prof in profs %}
-        <div class="list-group-item">{{prof.user_name}}</div>
-        {% endfor %}
-        </div>
-        <form action="{% url 'signup' op.id %}" method="POST">
-          {% csrf_token %}
-          <div class="center-content">
-          {% if signedup %}
-          You're Signed Up!
-          {% else %}
-          <button class="btn btn-lg btn-custom-primary" type="submit">Sign Up!</button>
-          {% endif %}
-          <a href="{% url 'volunteer_comments_list' opp_id %}" class="btn btn-lg btn-custom-secondary" style="margin:5px;">Go to Comments</a>
-          <a href="{% url 'volunteer_comments' opp_id %}" class="btn btn-lg btn-custom-secondary" style="margin:5px;">Leave a Comment</a>
-        </div>
-        </form>
+<div class="bg center-content">
+  <div class="card-container">
+    <div
+      class="row"
+      style="background-color: #f79256; border-radius: 50px; margin-bottom: 1em"
+    >
+      <div class="card-title">Leave a comment for {{op.volunteer_name}}</div>
     </div>
-      <div class="col">
-        <div class="list-group">
-            <div class="list-group-item list-group-item-custom-1">Location</div>
-        <iframe
-          height="400"
-          frameborder="0"
-          style="border: 0"
-          src="{{loc}}"
-          allowfullscreen
-        >
-        </iframe>
-        </div>
+    <form id="comment-form" action="{% url 'volunteer_submit' opp_id %}" method="post">
+      {% csrf_token %}
+      <div class="form-group">
+        <label for="comments_title">Title</label>
+        <input
+          class="form-control"
+          type="text"
+          id="comments_title"
+          name="comments_title"
+          value=""
+        />
       </div>
-    </div>
+      <div class="form-group">
+        <label for="comments_text">Body</label>
+        <textarea
+          form="comment-form"
+          class="form-control"
+          style="height: 9em; resize: none"
+          type="text"
+          id="comments_text"
+          name="comments_text"
+          value=""
+        ></textarea>
+      </div>
+      <input
+        class="btn btn-custom-primary"
+        style="float: right"
+        type="submit"
+        value="Submit"
+      />
+    </form>
+    <a style="width:200px;height:40px;font-size:1rem" href="{% url 'volunteer_comments_list' opp_id %}" class="btn btn-lg btn-custom-secondary">See Current Comments</a>
   </div>
 </div>
