--- a/microdonate/templates/microdonate/volunteer_comments_list.html
+++ b/microdonate/templates/microdonate/volunteer_comments_list.html
@@ -33,53 +33,44 @@
   }
   .bg {
     background-image: linear-gradient(
-        to bottom,
-        rgb(125, 207, 182, 1),
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("https://images.unsplash.com/photo-1557660559-42497f78035b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=815&q=80");
+      to bottom,
+      rgb(125, 207, 182),
+      rgb(251, 209, 162)
+    );
+    padding-top: 3em;
+    padding-bottom: 3em;
+  }
+  .card-container {
     padding: 3em;
-    background-size: cover;
-    background-position: center;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
+    border-radius: 10px;
+  }
+  .card-title {
+    margin-left: 1em;
+    margin-top: 0.5em;
+    font-weight: bolder;
+    font-size: xx-large;
     color: white;
-    border-bottom: 5px inset #fbd1a2;
   }
   .center-content {
     display: flex;
     justify-content: center;
     align-items: center;
   }
+  .card-title {
+    margin-left: 1em;
+    margin-top: 0.5em;
+    font-weight: bolder;
+    font-size: xx-large;
+    color: white;
+  }
   .list-group-item-custom {
-    background-color: #7dcfb6;
-    color: white;
-    font-weight: bold;
-  }
-  .list-group-item-custom-1 {
     background-color: #f79256;
     color: white;
     font-weight: bold;
-  }
-  .list-group{
-    width: 32em;
-    max-height: 600;
-    overflow: scroll;
-    margin-top: 3em;
-    margin-bottom: 3em;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .list-group::-webkit-scrollbar {
-    display: none;
-  }
-  .btn-custom-primary {
-    background-color: #7dcfb6;
-    border: none;
-    color: white;
-  }
-  .btn-custom-secondary {
-    background-color: #f79256;
-    border: none;
-    color: white;
+    font-size: x-large;
   }
 </style>
 <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
@@ -118,48 +109,27 @@
     </div>
   </div>
 </nav>
-<div class="bg">
-  <h2>{{title}}</h2>
-  {{op.date}}
-  <h6>{{op.description}}</h6>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="list-group">
-        <div class="list-group-item-custom list-group-item">
-          Participants Signed Up:
-        </div>
-        {% for prof in profs %}
-        <div class="list-group-item">{{prof.user_name}}</div>
-        {% endfor %}
-        </div>
-        <form action="{% url 'signup' op.id %}" method="POST">
-          {% csrf_token %}
-          <div class="center-content">
-          {% if signedup %}
-          You're Signed Up!
-          {% else %}
-          <button class="btn btn-lg btn-custom-primary" type="submit">Sign Up!</button>
-          {% endif %}
-          <a href="{% url 'volunteer_comments_list' opp_id %}" class="btn btn-lg btn-custom-secondary" style="margin:5px;">Go to Comments</a>
-          <a href="{% url 'volunteer_comments' opp_id %}" class="btn btn-lg btn-custom-secondary" style="margin:5px;">Leave a Comment</a>
-        </div>
-        </form>
-    </div>
-      <div class="col">
-        <div class="list-group">
-            <div class="list-group-item list-group-item-custom-1">Location</div>
-        <iframe
-          height="400"
-          frameborder="0"
-          style="border: 0"
-          src="{{loc}}"
-          allowfullscreen
-        >
-        </iframe>
-        </div>
+<div class="bg center-content">
+  <div
+    class="list-group"
+    style="
+      width: 80%;
+      margin-top: 3em;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      margin-bottom: 3em;
+    "
+  >
+    <div class="list-group-item list-group-item-custom">Comments for {{op.volunteer_name}}</div>
+    {% if comments %} {% for comment in comments %}
+    <div class="list-group-item">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">{{comment.comments_title }}</h5>
       </div>
+      <p class="mb-1">{{comment.comments_text}}</p>
     </div>
+    {% endfor %} {% else %}
+    <p>No comments available.</p>
+    {% endif %}
   </div>
 </div>
