--- a/microdonate/templates/microdonate/detailDon.html
+++ b/microdonate/templates/microdonate/detailDon.html
@@ -158,7 +158,7 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
       <span class="nav-link active">Welcome {{user.username}}! -- </span>
-      <a class ="nav-link active" href = "{% url 'accounts:logout' %}"> Log Out </a>
+      <a class ="nav-link active" href = "{% url 'account:logout' %}"> Log Out </a>
     </div>
   </div>
 </nav>
