Added to templates

--- a/microdonate/templates/microdonate/leaderboard.html
+++ b/microdonate/templates/microdonate/leaderboard.html
@@ -132,7 +132,8 @@
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
-      <span class="nav-link active">Welcome {{user.username}}!</span>
+      <span class="nav-link active">Welcome {{user.username}}! --</span>
+      <a class ="nav-link active" href = "/accounts/logout/"> Log Out </a>
     </div>
   </div>
 </nav>
