Final styling polishes

--- a/microdonate/templates/microdonate/detailDon.html
+++ b/microdonate/templates/microdonate/detailDon.html
@@ -153,7 +153,7 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
     <div class="navbar-nav ml-auto">
       <a class="nav-link active" href="{% url 'dashboard' %}">Dashboard</a>
       <div class="nav-link active">|</div>
-      <a class="nav-link active" href="#">How does it work?</a>
+      <a class="nav-link active" href="{% url 'about' %}">How does it work?</a>
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'leaderboard' %}">Leaderboard</a>
       <div class="nav-link active">|</div>
@@ -186,6 +186,7 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
         </div>
       </div>
         <div class="col">
+          <div class="row">
             <div style="text-align: center; padding: 3em;">
             <div class="btn-group btn-group-toggle" data-toggle="buttons">
                 <label id="option1label" class="btn btn-lg btn-warning active">
@@ -206,6 +207,7 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
               <input style="height: 50px" type="number" class="form-control" id="custom-donation" onchange="setCustom();" step="1" value="1.00" min="1.00" max="200.00">
               </div>
             </div>
+          </div>  
             <div id="paypal-button-container"></div>
         </div>
       </div>
