--- a/microdonate/templates/microdonate/donate_comments_list.html
+++ b/microdonate/templates/microdonate/donate_comments_list.html
@@ -39,6 +39,7 @@
     );
     padding-top: 3em;
     padding-bottom: 3em;
+    height: 100%;
   }
   .card-container {
     padding: 3em;
@@ -105,7 +106,10 @@
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
-      <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}</span>!</span>
+      <span class="nav-link active"
+        >Welcome
+        <span style="text-transform: capitalize">{{user.username}}</span>!</span
+      >
     </div>
   </div>
 </nav>
@@ -120,7 +124,9 @@
       margin-bottom: 3em;
     "
   >
-    <div class="list-group-item list-group-item-custom">Comments for {{op.donate_name}}</div>
+    <div class="list-group-item list-group-item-custom">
+      Comments for {{op.donate_name}}
+    </div>
     {% if comments %} {% for comment in comments %}
     <div class="list-group-item">
       <div class="d-flex w-100 justify-content-between">
@@ -129,7 +135,9 @@
       <p class="mb-1">{{comment.comments_text}}</p>
     </div>
     {% endfor %} {% else %}
-    <p>No comments available.</p>
+    <div class="list-group-item">
+      <p>No comments available.</p>
+    </div>
     {% endif %}
   </div>
 </div>
