Added Logout functionality

--- a/microdonate/templates/microdonate/profile.html
+++ b/microdonate/templates/microdonate/profile.html
@@ -130,6 +130,7 @@
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
       <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}!</span>
+      <a class ="nav-link active" href = "/accounts/logout/"> -- Log Out </a>
     </div>
   </div>
 </nav>
