--- a/microdonate/templates/microdonate/dash.html
+++ b/microdonate/templates/microdonate/dash.html
@@ -122,6 +122,7 @@
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
       <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}</span>!</span>
+      <a class ="nav-link active" href = "/accounts/logout/"> -- Log Out </a>
     </div>
   </div>
 </nav>
