--- a/microdonate/templates/microdonate/detailDon.html
+++ b/microdonate/templates/microdonate/detailDon.html
@@ -160,6 +160,7 @@ src="https://www.paypal.com/sdk/js?client-id=AYKM0L2kQVcDhtVWwWiYLZchmy8vuLhCGGz
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
       <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}</span>!</span>
+      <a class ="nav-link active" href = "/accounts/logout/"> -- Log Out </a>
     </div>
   </div>
 </nav>
