Added center-content and primary button custom

--- a/microdonate/templates/microdonate/about.html
+++ b/microdonate/templates/microdonate/about.html
@@ -91,6 +91,16 @@
     to {
       opacity: 1;
     }
+  .center-content {
+    display: flex;
+    justify-content: center;
+  }
+  .btn-custom-primary {
+    background-color: #7dcfb6;
+    border: none;
+    color: white;
+    margin-top: 2em;
+  }
   </style>
   <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
     <a class="navbar-brand mb-0 h1" href="{% url 'dashboard' %}">
