--- a/microdonate/templates/microdonate/about.html
+++ b/microdonate/templates/microdonate/about.html
@@ -135,10 +135,8 @@
       <div class="nav-link active">|</div>
       <a class="nav-link active" href="{% url 'profile' %}">My Profile</a>
       <div class="nav-link active">|</div>
-      <span class="nav-link active"
-        >Welcome
-        <span style="text-transform: capitalize">{{user.username}}</span>!</span
-      >
+      <span class="nav-link active">Welcome <span style="text-transform: capitalize">{{user.username}}</span>!</span>
+      <a class ="nav-link active" href = "/accounts/logout/"> -- Log Out </a>
     </div>
   </div>
 </nav>
